# mechanics

./: Cargo.toml
src/: app.rs  book.rs  game.rs  lib.rs  main.rs
src/app/: audio.rs  cursor_icon.rs  element.rs  interaction.rs  key_binding.rs  layer.rs  plugin.rs  screenshot.rs  settings.rs  startup.rs  theme.rs  ui.rs
src/app/anime_effect/: lens.rs
src/app/anime_effect/kind/: rect_shoot.rs
src/app/audio/: bgm.rs  se.rs
src/app/element/: kind.rs
src/app/element/kind/: menu_entry.rs  sensitivity_demo.rs  slider.rs
src/app/interaction/: default_focus.rs  handle.rs
src/app/ui/: plugin.rs  refresh.rs
src/book/: page.rs  plugin.rs
src/book/page/: about.rs  dev.rs  game.rs  help.rs  leaderboard.rs  level.rs  loading.rs  menu.rs  settings.rs
src/book/page/about/: audio.rs  main.rs  visual.rs
src/book/page/settings/: audio.rs  control.rs  display.rs
src/game/: action.rs  anime_end.rs  ball.rs  ball_interaction.rs  field.rs  leaderboard.rs  level_builder.rs  phase.rs  plugin.rs  startup.rs  status.rs  timer.rs
src/game/ball/: bomb.rs  bullet.rs  goal.rs  stone.rs
src/game/leaderboard/: model.rs  plugin.rs  record.rs
src/game/phase/: game_over.rs  paused.rs  preparing.rs  ready.rs  running.rs  setup.rs
