[package]
name = "mechanics"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-alt-ui-navigation-lite = "0.2.1"
bevy-persistent = { version = "0.6.0", features = ["bincode", "json"] }
bevy_mod_picking = "0.20.1"
bevy_prototype_lyon = "0.12.0"
bevy_tweening = "0.11.0"
chrono = "0.4.38"
circular-queue = "0.2.6"
dirs = "5.0.1"
lazy_static = "1.5.0"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
webbrowser = "1.0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
